# pescheck-clients

./: .gitattributes  .gitignore  Makefile  README.md  composer.json  package-lock.json  package.json
.github/workflows/: build.yml  e2e.yml  generate.yml  publish.yml  unit-tests.yml  verify-published.yml
clients/cpp/: CMakeLists.txt  README.md
clients/csharp/: Pescheck.Client.sln  README.md  appveyor.yml  git_push.sh
clients/rust/: Cargo.toml  README.md
clients/rust/.openapi-generator/: FILES
clients/rust/docs/: AuthenticationApi.md  ChecksApi.md  CustomTokenObtainPair.md  DivisionReadOnly.md  DivisionWrite.md  DivisionsApi.md  JwtGeneration.md  JwtResponse.md  OAuthApi.md  OAuthApplication.md  OAuthApplicationResponse.md  PaginatedDivisionReadOnlyList.md  PaginatedV2ProfileListItemList.md  PaginatedV2ScreeningListItemList.md  PatchedDivisionWrite.md  PatchedV2ProfilePartialUpdate.md  ProfilesApi.md  ScreeningsApi.md  TokenRefresh.md  V2Candidate.md  V2CheckField.md  V2CheckInfo.md  V2Document.md  V2DocumentContent.md  V2Money.md  V2ProfileCheck.md  V2ProfileCheckEntry.md  V2ProfileCreate.md  V2ProfileDetail.md  V2ProfileListItem.md  V2ProfileUpdate.md  V2ProfileUpdateCheck.md  V2ScreeningCheck.md  V2ScreeningCheckEntry.md  V2ScreeningCheckListItem.md  V2ScreeningCreate.md  V2ScreeningDetail.md  V2ScreeningDetailProfile.md  V2ScreeningListItem.md  V2ScreeningNote.md  (+5 more)
clients/rust/src/apis/: authentication_api.rs  checks_api.rs  configuration.rs  divisions_api.rs  mod.rs  o_auth_api.rs  profiles_api.rs  screenings_api.rs  webhooks_api.rs
clients/rust/src/models/: custom_token_obtain_pair.rs  division_read_only.rs  division_write.rs  jwt_generation.rs  jwt_response.rs  mod.rs  o_auth_application.rs  o_auth_application_response.rs  paginated_division_read_only_list.rs  paginated_v2_profile_list_item_list.rs  paginated_v2_screening_list_item_list.rs  patched_division_write.rs  patched_v2_profile_partial_update.rs  token_refresh.rs  v2_candidate.rs  v2_check_field.rs  v2_check_info.rs  v2_document.rs  v2_document_content.rs  v2_money.rs  v2_profile_check.rs  v2_profile_check_entry.rs  v2_profile_create.rs  v2_profile_detail.rs  v2_profile_list_item.rs  v2_profile_update.rs  v2_profile_update_check.rs  v2_screening_check.rs  v2_screening_check_entry.rs  v2_screening_check_list_item.rs  v2_screening_create.rs  v2_screening_detail.rs  v2_screening_detail_profile.rs  v2_screening_list_item.rs  v2_screening_note.rs  v2_screening_note_input.rs  verify_webhook.rs  webhook.rs  webhook_response.rs
config/: cpp.yaml  csharp.yaml  go.yaml  java.yaml  javascript.yaml  php.yaml  python.yaml  ruby.yaml  rust.yaml  typescript.yaml
examples/cpp-crud/: CMakeLists.txt  main.cpp
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
examples/rust/tests/: crud_integration.rs
scripts/: fetch-spec.sh  filter-spec.mjs  get-token.sh  postprocess.mjs
spec/: openapi.v2.yaml  openapi.yaml
(+1302 files in other folders)
