[package]
name = "pescheck-e2e"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "list_checks"
path = "src/main.rs"

[[bin]]
name = "crud_lifecycle"
path = "src/bin/crud_lifecycle.rs"

[dependencies]
pescheck-client = { path = "../../clients/rust" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
